updated path for picture

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <div class="content-wrap">
           <h1>Namitha Tenkanidiyoor</h1>
           <h2>Software Engineer</h2>
-          <img src="pic.png">
+          <img src="https://raw.githubusercontent.com/Namitha045/my_web/master/pic.png">
           <p>About 8+ years of experience in various tools and technologies in all phases of software development.
             In depth knowledge of practices involved in Retail domain.
             Strong development Experience in Datastage , WebSphere Message Broker, Python, JavaScript, PL/SQL.</p>
