--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
               <li>Programming Languages	:  Python, SQL, ESQL, HTML, JavaScript, Unix shell scripting</li>
               <li>Middleware Tools		:    WebSphere Message broker, DataStage, RabbitMQ</li>
               <li>Database		       	:    Oracle, DB2, SQL Server </li>
-              <li>Development Tools		:    VScode, PyDev, Toad, SQL Developer, DBeaver, SQL server, IDM data studio</li>
+              <li>Development Tools		:    VScode, PyDev, Toad, SQL Developer, DBeaver, SQL server, IBM data studio</li>
             </ul>
       </section>
 
