updated few details

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
           <img src="https://raw.githubusercontent.com/Namitha045/my_web/master/pic.PNG">
           <p>About 8+ years of experience in various tools and technologies in all phases of software development.
             In depth knowledge of practices involved in Retail domain.
-            Strong development Experience in Datastage , WebSphere Message Broker, Python, JavaScript, PL/SQL.</p>
+            Strong development Experience in Datastage , WebSphere Message Broker, Python, Django JavaScript, PL/SQL.</p>
           <p>Certified Scrum Master from Scrum alliance.</p>
        </div>
       </header>
@@ -30,12 +30,10 @@
               <li>Operating Systems		:    Windows, UNIX</li>
               <li>Programming Languages	:  Python, SQL, ESQL, HTML, JavaScript, Unix shell scripting</li>
               <li>Middleware Tools		:    WebSphere Message broker, DataStage, RabbitMQ</li>
-              <li>Database		       	:    Oracle, DB2, SQL Server </li>
-              <li>Development Tools		:    VScode, PyDev, Toad, SQL Developer, DBeaver, SQL server, IBM data studio</li>
+              <li>Database		       	:    Oracle, DB2, SQL Server, POSTGRESql </li>
+              <li>Development Tools		:    VScode, PyDev, Toad, SQL Developer, DBeaver, SQL server, IBM data studio, Atom</li>
             </ul>
       </section>
-
-          <!-- Copy the whole <section> block to add more projects. -->
 
       <!-- ***********************  WORK EXPERIENCE  *********************** -->
       <section>
@@ -57,8 +55,7 @@
               </ul>
         </div>
       </section>
-
-        <!-- Copy this whole <section> block to add more jobs. -->
+        
       <section class="job-summary">
           <div class="content-wrap">
             <h2 class="Job-Details">Job Details</h2>
@@ -67,10 +64,11 @@
               <li>Company Name : Infosys Ltd</li>
               <li>Date at job : June 2011- March 2020</li>
               <li>Job summary :
+                <p>Joined as a Systems Engineer Trainee, I held roles of Systems Engineer, Senior Systems Engineer and Technology Analyst through several years.</p>
                 <p>Middleware Developer : As a middleware developer with 5.5 years of experience, achieved business expanding workflows with IBM WebSphere message broker 7.0 and 8.0 with enhanced ESQL for business data transformation.</p>
                 <p>ETL Developer : With 5 years of experience, shaped several key business components using IBM DataStage 7.5.3 and 11.5 for time mounted events.</p>
-                <p>Python Developer : As a python developer with 2.5 years experience, attained business proficiency using modules like Tkinter, NumPy, matplotlib.
-                  Developed RESTful APIs using Django restframe work.</p>
+                <p>Python Developer : As a python developer with 2.5 years experience, attained business proficiency using modules like Tkinter, Pandas, NumPy, matplotlib.</p>
+                <p>Django Developer: Good experience is developing web applications implementing MVT architecture using Django framework. Developed RESTful APIs using Django restframe work.</p>
                 <p>Front-end Developer : About 6 months of experience ,Developed Web pages using HTML, CSS and Javascript.</p>
               </li>
             </ul>
