--- a/index.html
+++ b/index.html
@@ -12,11 +12,13 @@
       <!-- ***********************  ABOUT / PROFILE  *********************** -->
       <header>
         <div class="content-wrap">
+          <p></p>
           <h1>Namitha Tenkanidiyoor</h1>
           <h2>Software Engineer</h2>
           <img src="https://raw.githubusercontent.com/Namitha045/my_web/master/pic.PNG">
+          <p></p>
           <p>About 9+ years of experience in various tools and technologies in all phases of software development.
-            In depth knowledge of practices involved in Retail domain.
+            Currently working for a major financial client in Market risk team. In depth knowledge of practices involved in Retail domain.
             Strong development Experience in Python, Unix, Django, PL/SQL, Datastage, WebSphere Message Broker.</p>
        </div>
       </header>
