--- a/index.html
+++ b/index.html
@@ -18,8 +18,9 @@
           <img src="https://raw.githubusercontent.com/Namitha045/my_web/master/pic.PNG">
           <p></p>
           <p>About 9+ years of experience in various tools and technologies in all phases of software development.
-            Currently working for a major financial client in Market risk team. In depth knowledge of practices involved in Retail domain.
-            Strong development Experience in Python, Unix, Django, PL/SQL, Datastage, WebSphere Message Broker.</p>
+            In depth knowledge of practices involved in Retail domain.Strong development Experience in Python, Unix, Django, PL/SQL, Datastage, WebSphere Message Broker.
+            Most recent experience involves working for a major financial client in Market risk team.
+          </p>
        </div>
       </header>
 
@@ -64,7 +65,7 @@
             <ul>
               <li>Job Title : Senior Associate Technology</li>
               <li>Company Name : Synechron </li>
-              <li>Date at job : Sep 2021-current</li>
+              <li>Date at job : Sep 2021-July 2022</li>
               <li>Job summary :
                 <p>Working for a Major Financial client as Senior Python developer in Market Risk Team performing enhancements to the essential parts of FRTB component to support IBM symphony grid computing</p>
                 <p>Main Responsibilities include Testing of existing workflows, merge different calculation workflows into one robust engine, Improve code quality, maintainability and testability</p>
