--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
                 <p>ETL Developer : With 5 years of experience, shaped several key business components using IBM DataStage 7.5.3 and 11.5 for time mounted events.</p>
                 <p>Python Developer : As a python developer with 2.5 years experience, attained business proficiency using modules like Tkinter, Pandas, NumPy, matplotlib.</p>
                 <p>Django Developer: Good experience is developing web applications implementing MVT architecture using Django framework. Developed RESTful APIs using Django restframe work.</p>
-                <p>Front-end Developer : About 6 months of experience ,Developed Web pages using HTML, CSS and Javascript.</p>
+                <p>Front-end Developer : About 1 year of experience ,Developed Web pages using HTML, CSS and Javascript.</p>
               </li>
             </ul>
           <!-- End of Job block. -->
