--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
           <h2>Software Engineer</h2>
           <img src="https://raw.githubusercontent.com/Namitha045/my_web/master/pic.PNG">
           <p></p>
-          <p>About 9+ years of experience in various tools and technologies in all phases of software development.
+          <p>About 10+ years of experience in the industry with various tools and technologies in all phases of software development.
             In depth knowledge of practices involved in Retail domain.Strong development Experience in Python, Unix, Django, PL/SQL, Datastage, WebSphere Message Broker.
-            Most recent experience involves working for a major financial client in Market risk team.
+            Briefly worked with a financial client and the most recent experience involves working for HP Inc within the print software systems.
           </p>
        </div>
       </header>
@@ -32,7 +32,7 @@
               <li>Operating Systems		:    Windows, UNIX, Linux</li>
               <li>Programming Languages	:  Python, SQL, ESQL, HTML, Unix shell scripting</li>
               <li>Middleware Tools		:    WebSphere Message broker, DataStage, RabbitMQ</li>
-              <li>Database		       	:    Oracle, DB2, SQL Server, POSTGRESql </li>
+              <li>Database		       	:    Oracle, DB2, SQL Server, POSTGRESql, Mongo </li>
               <li>Development Tools		:    VScode, PyDev, Toad, SQL Developer, DBeaver, Jupyter Notebook, SQL server, IBM data studio</li>
             </ul>
       </section>
@@ -59,17 +59,34 @@
       </section>
         
       <section class="job-summary">
+
+        <div class="content-wrap">
+            <h2 class="Job-Details">Job Details</h2>
+            <ul>
+              <li>Job Title : Technical Lead</li>
+              <li>Company Name : HCLTech </li> 
+              <li>Clinet: HP Inc</li>
+              <li>Date at job : Sep 2022-Present</li>
+              <li>Job summary :
+                <p>Working as a Python Developer for the Print Systems developing tools for Quality enforcing and Gating requirements.</p>
+                <p>Main Resposibilites includes Design, Developing of code pipelines to scan the Data across all print organisation and display it using Dashboard.</p>
+                <p>It involves working with Python, Mongo, Github,JSON, YAML Jira and UI Design using Figma</p>
+              </li>
+            </ul>
+          <!-- End of Job block. -->
+          </div>
         
         <div class="content-wrap">
             <h2 class="Job-Details">Job Details</h2>
             <ul>
               <li>Job Title : Senior Associate Technology</li>
-              <li>Company Name : Synechron </li>
+              <li>Company Name : Synechron </li> 
+              <li>Clinet: Citi Bank</li>
               <li>Date at job : Sep 2021-July 2022</li>
               <li>Job summary :
                 <p>Working for a Major Financial client as Senior Python developer in Market Risk Team performing enhancements to the essential parts of FRTB component to support IBM symphony grid computing</p>
                 <p>Main Responsibilities include Testing of existing workflows, merge different calculation workflows into one robust engine, Improve code quality, maintainability and testability</p>
-                <p>It involves working with Python, bash, Linux, Bitbucket, Jenkins, SonarQube, Jira.</p>
+                <p>It involved working with Python, bash, Linux, Bitbucket, Jenkins, SonarQube, Jira.</p>
               </li>
             </ul>
           <!-- End of Job block. -->
@@ -80,6 +97,7 @@
             <ul>
               <li>Job Title : Technology Analyst</li>
               <li>Company Name : Infosys Ltd</li>
+              <li>The Gap Inc</li>
               <li>Date at job : June 2011- March 2020</li>
               <li>Job summary :
                 <p>Joined as a Systems Engineer Trainee, I held roles of Systems Engineer, Senior Systems Engineer and Technology Analyst through several years.</p>
