fixed type client

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
             <ul>
               <li>Job Title : Technical Lead</li>
               <li>Company Name : HCLTech </li> 
-              <li>Clinet: HP Inc</li>
+              <li>Client: HP Inc</li>
               <li>Date at job : Sep 2022-Present</li>
               <li>Job summary :
                 <p>Working as a Python Developer for the Print Systems developing tools for Quality enforcing and Gating requirements.</p>
@@ -81,7 +81,7 @@
             <ul>
               <li>Job Title : Senior Associate Technology</li>
               <li>Company Name : Synechron </li> 
-              <li>Clinet: Citi Bank</li>
+              <li>Client: Citi Bank</li>
               <li>Date at job : Sep 2021-July 2022</li>
               <li>Job summary :
                 <p>Working for a Major Financial client as Senior Python developer in Market Risk Team performing enhancements to the essential parts of FRTB component to support IBM symphony grid computing</p>
@@ -97,7 +97,7 @@
             <ul>
               <li>Job Title : Technology Analyst</li>
               <li>Company Name : Infosys Ltd</li>
-              <li>The Gap Inc</li>
+              <li>Client: The Gap Inc</li>
               <li>Date at job : June 2011- March 2020</li>
               <li>Job summary :
                 <p>Joined as a Systems Engineer Trainee, I held roles of Systems Engineer, Senior Systems Engineer and Technology Analyst through several years.</p>
