rewritten the sentences

--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
           <h2>Software Engineer</h2>
           <img src="https://raw.githubusercontent.com/Namitha045/my_web/master/pic.PNG">
           <p></p>
-          <p>About 10+ years of experience in the industry with various tools and technologies in all phases of software development.
-            In depth knowledge of practices involved in Retail domain.Strong development Experience in Python, Unix, Django, PL/SQL, Datastage, WebSphere Message Broker.
-            Briefly worked with a financial client and the most recent experience involves working for HP Inc within the print software systems.
+          <p>With over 10 years of industry experience, I have worked with various tools and technologies throughout the software development lifecycle.
+            I have deep understanding of practices in the Retail domain and strong development experience in Python, Unix, Django, PL/SQL, Datastage, WebSphere Message Broker.
+            I have also worked with a financial client and recently, I have been working for HP Inc in the print software systems.
           </p>
        </div>
       </header>
@@ -42,17 +42,16 @@
           <div class="content-wrap">
             <h2 class="work-experience">Work Experience</h2>
               <ul>
-                <li>Requirements Gathering: Understanding both functional and non-functional by going through the specifications and inputs from Business Analysts in
-                  order to participate efficiently in the design, development and testing phases of the project.</li>
-                <li>Design: Involved in impact analysis, creating design specifications as per high -level design
-                  in order to develop the application as per requirements.</li>
-                <li>Development: Developing and reviewing artifacts (code, documentation, unit test scripts) conducting reviews in order to build application and make
-                  it ready for validation/delivery.</li>
-                <li>Testing: Performing validation activities (functional, integration system, user experience) based on the plans, identification and validation of defects found,
-                  creation and reviewing of artifacts in order to ensure quality deliverables.</li>
+                <li>Requirements Gathering: I have experience in understanding both functional and non-functional requirements by reviewing specifications and inputs from Business analysts.
+                  This allows me to effectively participate in the design, development and testing phases of a project.</li>
+                <li>Design: I have been involved in impact analysis and creating design specifications based on high-level designs to meet project requirements.</li>
+                <li>Development: I have expereince in developing and reviewing artifacts such as code, documentation and unit test scripts. I conduct reviews to ensure the application is 
+                  ready for validation/delivery.</li>
+                <li>Testing: I have performed validation activities including functional, integration system, user experience testing. I indentify and validate defects, and create
+                  and review artifacts to ensure high-quality deliverables.</li>
                 <li>Familiarity with Robot Test framework, Continuous Integration Environment, SDN and Devops model.</li>
-                <li>Participated fully in the development process through the entire software lifecycle.</li>
-                <li>Mentored and assisted the activities of junior developers. Helped recruit and grow new talents.</li>
+                <li>I have actively participated in the development process throughout the entire software lifecycle. I have also mentored and assisted junior developers
+                and contributed to the recruitment and growth of new talents.</li>
 
               </ul>
         </div>
@@ -68,9 +67,8 @@
               <li>Client: HP Inc</li>
               <li>Date at job : Sep 2022-Present</li>
               <li>Job summary :
-                <p>Working as a Python Developer for the Print Systems developing tools for Quality enforcing and Gating requirements.</p>
-                <p>Main Resposibilites includes Design, Developing of code pipelines to scan the Data across all print organisation and display it using Dashboard.</p>
-                <p>It involves working with Python, Mongo, Github,JSON, YAML Jira and UI Design using Figma</p>
+                <p>As a Python developer for the Print systems, I am responsible for developing tools for quality enforcement adn Gating requirements. This requires working
+                with Python, mongo, Github, JSON, YAML, Jira and UI design using Figma.</p>
               </li>
             </ul>
           <!-- End of Job block. -->
@@ -84,9 +82,8 @@
               <li>Client: Citi Bank</li>
               <li>Date at job : Sep 2021-July 2022</li>
               <li>Job summary :
-                <p>Working for a Major Financial client as Senior Python developer in Market Risk Team performing enhancements to the essential parts of FRTB component to support IBM symphony grid computing</p>
-                <p>Main Responsibilities include Testing of existing workflows, merge different calculation workflows into one robust engine, Improve code quality, maintainability and testability</p>
-                <p>It involved working with Python, bash, Linux, Bitbucket, Jenkins, SonarQube, Jira.</p>
+                <p>I worked as a Senior Python Developer in the Market Risk Team for a major financial client. My Rresponsibilities included enhancing essential parts of the 
+                  FRTB component to support IBM Symphony grid computing. This involved working with Python, bash, Linux, Bitbucket, Jenkins and Jira.</p>
               </li>
             </ul>
           <!-- End of Job block. -->
@@ -100,12 +97,9 @@
               <li>Client: The Gap Inc</li>
               <li>Date at job : June 2011- March 2020</li>
               <li>Job summary :
-                <p>Joined as a Systems Engineer Trainee, I held roles of Systems Engineer, Senior Systems Engineer and Technology Analyst through several years.</p>
-                <p>Middleware Developer : As a middleware developer with 5.5 years of experience, achieved business expanding workflows with IBM WebSphere message broker 7.0 and 8.0 with enhanced ESQL for business data transformation.</p>
-                <p>ETL Developer : With 5 years of experience, shaped several key business components using IBM DataStage 7.5.3 and 11.5 for time mounted events.</p>
-                <p>Python Developer : As a python developer with 2.5 years experience, attained business proficiency using modules like Tkinter, Pandas, NumPy, matplotlib.</p>
-                <p>Django Developer: Good experience is developing web applications implementing MVT architecture using Django framework. Developed RESTful APIs using Django restframe work.</p>
-                <p>Front-end Developer : About 1 year of experience ,Developed Web pages using HTML, CSS and Javascript.</p>
+                <p>During my tenure as Infosys Ltd, I held various roles including systems Engineer Trainee, Systems Engineer, Senior Systems Engineer and Technology analyst.
+                I have experience as a Middleware Developer, ETL Developer, Python Developer and Django Developer. I have worked with IBM Webshpere Message Broker, IBM Datastage,
+                and Django Framework to dveelop business expanding workflows, key business comonents and Web applications.</p>
               </li>
             </ul>
           <!-- End of Job block. -->
