--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
               <li>Client: HP Inc</li>
               <li>Date at job : Sep 2022-Present</li>
               <li>Job summary :
-                <p>As a Python developer for the Print systems, I am responsible for developing tools for quality enforcement adn Gating requirements. This requires working
+                <p>As a Python developer for the Print systems, I am responsible for developing tools for quality enforcement and Gating requirements. This requires working
                 with Python, mongo, Github, JSON, YAML, Jira and UI design using Figma.</p>
               </li>
             </ul>
