--- a/index.html
+++ b/index.html
@@ -14,12 +14,13 @@
         <div class="content-wrap">
           <p></p>
           <h1>Namitha Tenkanidiyoor</h1>
-          <h2>Software Engineer</h2>
+          <h2>Python Engineer</h2>
           <img src="https://raw.githubusercontent.com/Namitha045/my_web/master/pic.PNG">
           <p></p>
-          <p>With over 10 years of industry experience, I have worked with various tools and technologies throughout the software development lifecycle.
-            I have deep understanding of practices in the Retail domain and strong development experience in Python, Unix, Django, PL/SQL, Datastage, WebSphere Message Broker.
-            I have also worked with a financial client and recently, I have been working for HP Inc in the print software systems.
+          <p>With over a decade of experience, a seasoned Technical Lead with a strong focus on Python development, PostgreSQL, and API integration. 
+            Expertise extends across various technologies such as IBM Mainframe, DataStage, and WebSphere Message Broker, complemented by proficiency in Azure, 
+            Terraform, and Django Rest framework. Innovative solutions are designed and implemented in web-based applications, consistently driving efficiency 
+            and excellence in every project undertaken.
           </p>
        </div>
       </header>
@@ -30,8 +31,8 @@
             <h2 class="projects">Technical skills</h2>
             <ul>
               <li>Operating Systems		:    Windows, UNIX, Linux</li>
-              <li>Programming Languages	:  Python, SQL, ESQL, HTML, Unix shell scripting</li>
-              <li>Middleware Tools		:    WebSphere Message broker, DataStage, RabbitMQ</li>
+              <li>Programming Languages	:  Python, SQL, Unix, Docker, JavaScript, HTML & CSS.</li>
+              <li>Middleware/ETL Tools	:  WebSphere Message broker, DataStage, RabbitMQ</li>
               <li>Database		       	:    Oracle, DB2, SQL Server, POSTGRESql, Mongo </li>
               <li>Development Tools		:    VScode, PyDev, Toad, SQL Developer, DBeaver, Jupyter Notebook, SQL server, IBM data studio</li>
             </ul>
