updated latest exp

--- a/index.html
+++ b/index.html
@@ -66,10 +66,10 @@
               <li>Job Title : Technical Lead</li>
               <li>Company Name : HCLTech </li> 
               <li>Client: HP Inc</li>
-              <li>Date at job : Sep 2022-Present</li>
+              <li>Date at job : Sep 2022-Feb 2024</li>
               <li>Job summary :
-                <p>As a Python developer for the Print systems, I am responsible for developing tools for quality enforcement and Gating requirements. This requires working
-                with Python, mongo, Github, JSON, YAML, Jira and UI design using Figma.</p>
+                <p>As a Python developer for the Print systems, I am responsible for developing tools for creating data ingestion pipelines that give insights into 
+                  behaviour of different systems within print. This involves working with Python, mongo, Github, JSON, YAML, Jira and UI design using Figma.</p>
               </li>
             </ul>
           <!-- End of Job block. -->
